# fixer

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
crates/fixer/: Cargo.toml
crates/fixer/src/: adapters.rs  app.rs  capabilities.rs  collectors.rs  config.rs  gc.rs  lib.rs  models.rs  network.rs  pow.rs  privacy.rs  proposal.rs  protocol.rs  server.rs  storage.rs  util.rs  workspace.rs
debian/: README.Debian  changelog  control  copyright  fixer-server.postinst  fixer-server.service  fixer-server.toml  fixer.service  fixer.tmpfiles  fixer.toml  rules
deploy/: Caddyfile  fixer-server.toml
deploy/apt/: repo.env
doc/: architecture.md  design-decisions.md  host-inventory-template.md  requirements.md  service-actions.md
examples/: fixer.toml
scripts/: build-env.sh  build-release-debs.sh  check-nonlocal-deploy.py  deploy-fixer-server.sh  enroll-client-host.sh  publish-apt-repo.sh  release-public.sh  upgrade-all-hosts.sh  upgrade-host.sh  validate-service-actions.py  verify-public-services.sh
