[workspace]
members = ["crates/fixer"]
resolver = "2"

[workspace.package]
version = "0.144.0"
edition = "2024"
license = "MIT"
authors = ["Darafei Praliaskouski"]

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
postgres = { version = "0.19", features = ["with-chrono-0_4", "with-serde_json-1"] }
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["chrono"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.15"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5"
uuid = { version = "1.18", features = ["serde", "v7"] }
walkdir = "2.5"
